--- a/cvtemplate/src/views/banner.html
+++ b/cvtemplate/src/views/banner.html
@@ -6,8 +6,8 @@
   <div class="hero-content display-table">
       <div class="table-cell">
           <div class="container">
-              <p class="display-6 color-d">Hello, world!</p>
-              <h1 class="hero-title mb-4">I am Adi</h1>
+              <p class="display-6 color-d">Buna ziua lume!</p>
+              <h1 class="hero-title mb-4">I am Bogdan </h1>
               <p class="hero-subtitle"><span class="typed"
                       data-typed-items="Teacher, Mentor, Developer, Freelancer, Designer"></span></p>
               <ul class="list-inline list-social">
