--- a/cvtemplate/src/scss/styles.scss
+++ b/cvtemplate/src/scss/styles.scss
@@ -26,9 +26,9 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 $font-family_1: "Roboto", Helvetica, Arial, sans-serif;
 $font-family_2: "Montserrat", sans-serif;
 
-$color_1: #4e4e4e;
-$color_2: #1a1a1a;
-$color_3: #cc005f;
+$color_1: #40d4e1;
+$color_2: #95dbec;
+$color_3: #e41239;
 $color_4: #f5f5f5;
 $color_5: #075b35;
 $color_6: #075b35;
@@ -43,19 +43,19 @@ $vueColor: #42b883;
 $angularColor: #f9174d;
 $animation-delay: 0.7s;
 
-$border-color_1: rgba(255, 255, 255, 0.3);
+$border-color_1: rgba(185, 184, 184, 0.45);
 $border-color_2: $vueColor;
 $border-top-color_1: #eee;
 
 $progressbar-title-color: #fff;
 
 $background-color_1: #ffffff;
-$background-color_2: $color_3;
+$background-color_2: $color_2;
 $background-color_3: $color_2;
 $background-color_4: #0062d3;
 $background-color_5: transparent;
 $background-color_6: #0062d3;
-$background-color_7: #1e07f0;
+$background-color_7: #212025;
 $background-color_8: #0062d3;
 
 $li-padding: 5px;
@@ -77,6 +77,8 @@ $dm-text-color-secondary: rgba(256, 256, 256, 0.7);
 
 //*************************** Theme Styles ****************************/
 // Import theme styles
+@import "../../node_modules/glightbox/dist/css/glightbox.min.css";
+@import "portfolio";
 
 @import "general";
 @import "base";
@@ -84,7 +86,8 @@ $dm-text-color-secondary: rgba(256, 256, 256, 0.7);
 @import "banner";
 @import "social";
 @import "about";
-//@import "experience";
+@import "experience";
+@import "portfolio";
 @import "contact";
 @import "footer";
 
