--- a/cvtemplate/src/scss/styles.scss
+++ b/cvtemplate/src/scss/styles.scss
@@ -89,6 +89,7 @@ $dm-text-color-secondary: rgba(256, 256, 256, 0.7);
 @import "experience";
 @import "portfolio";
 @import "contact";
+@import "githubapi";
 @import "footer";
 
 // @import "dark-mode";
